Fix blue outline on iphone version

--- a/web/app/themes/Foody/resources/sass/pages/recipe/_recipe-new.scss
+++ b/web/app/themes/Foody/resources/sass/pages/recipe/_recipe-new.scss
@@ -1323,6 +1323,7 @@ $content-width: 95%;
               margin: 6% 0;
 
               .slick-slide {
+                outline: none;
                 width: 100vw;
                 text-align: right;
 
@@ -1793,6 +1794,7 @@ $content-width: 95%;
 
           .slick-slide {
             //&.slick-active {
+            outline: none;
             img {
               width: 100vw;
               //max-height: 38vh;
@@ -1867,6 +1869,7 @@ $content-width: 95%;
                 //  display: none;
                 //}
                 //width: 96px;
+                outline: none;
                 width: 25.5vw;
                 height: 64px;
                 position: relative;
@@ -2528,6 +2531,10 @@ $content-width: 95%;
           text-align: center;
           font-weight: bold;
           font-family: 'AfekBold';
+
+          #rating-loader {
+            right:0;
+          }
         }
       }
 
@@ -2844,6 +2851,7 @@ $content-width: 95%;
                 margin: 6% 0;
 
                 .slick-slide {
+                  outline: none;
                   width: 100vw;
                   text-align: right;
 
